--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "npm run compile-scss && node app.js",
+    "compile-scss": "sass --load-path=node_modules/@picocss/pico/scss/ app/sass:public/stylesheets"
   },
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@picocss/pico": "^2.0.3",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "sass": "^1.71.1"
   }
 }
