--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@picocss/pico": "^2.0.3",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   },
