--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "npm run compile-scss && node app.js",
-    "compile-scss": "sass --load-path=node_modules/@picocss/pico/scss/ app/sass:public/stylesheets"
+    "compile-scss": "sass --load-path=node_modules/@picocss/pico/scss/ public/sass:public/stylesheets"
   },
   "type": "module",
   "keywords": [],
