--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,10 +18,13 @@
 				"mongodb.mongodb-vscode"
 			]
 		}
-	}
+	},
+	"features": {
+		"ghcr.io/devcontainers-contrib/features/mongosh-homebrew:1": {}
+	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [3000, 27017],
+	"forwardPorts": [3000, 27017]
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "yarn install",
