--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@picocss/pico": "^2.0.3",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "mongoose": "^8.2.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
