--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,8 @@
 		}
 	},
 	"features": {
-		"ghcr.io/devcontainers-contrib/features/mongosh-homebrew:1": {}
+		"ghcr.io/devcontainers-contrib/features/mongosh-homebrew:1": {},
+		"ghcr.io/shyim/devcontainers-features/bun:0": {}
 	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
