--- a/migrate/package.json
+++ b/migrate/package.json
@@ -41,6 +41,7 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "1.6.3",
-    "@fortawesome/fontawesome-free": "^6.5.1"
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "surrealdb.js": "^0.11.0"
   }
 }
