--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,30 +7,30 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../..:/workspaces:cached
-
-    # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
+    network_mode: service:database
 
-    # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    network_mode: service:db
-
-    # Use "forwardPorts" in **devcontainer.json** to forward an app port locally. 
-    # (Adding the "ports" property to this file will not forward from a Codespace.)
-
-  db:
-    image: mongo:latest
+  database:
+    container_name: database
+    image: surrealdb/surrealdb:v1.2.2-dev
     restart: unless-stopped
+    env_file:
+      - .env
+    entrypoint:
+      - /surreal
+      - start
+      - --allow-guests
+      - --auth
+      - --user
+      - $DB_USER
+      - --pass
+      - $DB_PASSWORD
+      - --log
+      - $DB_LOG_LEVEL
+      - file:/db/surreal.db
     volumes:
-      - mongodb-data:/data/db
-
-    # Uncomment to change startup options
-    # environment:
-    #  MONGO_INITDB_ROOT_USERNAME: root
-    #  MONGO_INITDB_ROOT_PASSWORD: example
-    #  MONGO_INITDB_DATABASE: your-database-here
-
-    # Add "forwardPorts": ["27017"] to **devcontainer.json** to forward MongoDB locally.
-    # (Adding the "ports" property to this file will not forward from a Codespace.)
+      - ./db:/db
 
 volumes:
-  mongodb-data:
+  db:
+    name: db
