--- a/migrate/package.json
+++ b/migrate/package.json
@@ -42,6 +42,10 @@
   "dependencies": {
     "@floating-ui/dom": "1.6.3",
     "@fortawesome/fontawesome-free": "^6.5.1",
-    "surrealdb.js": "^0.11.0"
+    "@types/throttle-debounce": "^5.0.2",
+    "surrealdb.js": "^0.11.0",
+    "sveltekit-superforms": "^2.9.0",
+    "throttle-debounce": "^5.0.0",
+    "zod": "^3.22.4"
   }
 }
