--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-PUBLIC_DB_URL=http://localhost:8000
+PUBLIC_DB_URL=https://cautious-bassoon-wqxrrvxjxg52ggp6-8000.app.github.dev/
+PRIVATE_DB_URL=http://localhost:8000
 PUBLIC_DB_NS=eFolio
 PUBLIC_DB_NAME=eFolio
 DB_USER=eFolio
