--- a/package.json
+++ b/package.json
@@ -12,31 +12,33 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@skeletonlabs/skeleton": "^2.9.0",
+    "@skeletonlabs/tw-plugin": "^0.3.1",
     "@sveltejs/adapter-auto": "^3.1.1",
     "@sveltejs/kit": "^2.5.4",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/eslint": "^8.56.6",
+    "@types/node": "^20.11.30",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "prettier-plugin-merge": "^0.6.0",
     "prettier-plugin-svelte": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.5.13",
     "svelte": "^4.2.12",
     "svelte-check": "^3.6.8",
+    "tailwindcss": "^3.4.1",
     "tslib": "^2.6.2",
     "typescript": "^5.4.3",
     "vite": "^5.2.6",
-    "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19",
-    "tailwindcss": "^3.4.1",
-    "@skeletonlabs/skeleton": "^2.9.0",
-    "@skeletonlabs/tw-plugin": "^0.3.1",
-    "vite-plugin-tailwind-purgecss": "^0.2.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/node": "^20.11.30"
+    "vite-plugin-tailwind-purgecss": "^0.2.0"
   },
   "type": "module",
   "dependencies": {
