--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -1,3 +1,3 @@
-DB_USER=eFolio
-DB_PASSWORD=12345678
+DB_USER=test
+DB_PASSWORD=test
 DB_LOG_LEVEL=info # Can be one of [error, warn, info, debug, trace, full]
