--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
 PUBLIC_DB_URL=http://localhost:8000
-PUBLIC_DB_NS=eFolio
-PUBLIC_DB_NAME=eFolio
-DB_URL=http://localhost:8000
-DB_USER=eFolio
-DB_PASSWORD=12345678
+PUBLIC_DB_NS=test
+PUBLIC_DB_NAME=test
