--- a/.prettierrc
+++ b/.prettierrc
@@ -2,11 +2,7 @@
   "useTabs": false,
   "singleQuote": true,
   "trailingComma": "none",
-  "printWidth": 100,
-  "plugins": [
-    "prettier-plugin-svelte",
-    "prettier-plugin-tailwindcss",
-    "prettier-plugin-merge"
-  ],
+  "printWidth": 120,
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss", "prettier-plugin-merge"],
   "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
