--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "prettier-plugin-merge": "^0.6.0",
     "prettier-plugin-svelte": "^3.2.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "stripe": "^15.3.0",
     "svelte": "^4.2.15",
     "svelte-check": "^3.6.9",
+    "svelte-stripe": "^1.1.7",
     "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
